--- a/src/main/resources/templates/search/list.html
+++ b/src/main/resources/templates/search/list.html
@@ -17,7 +17,7 @@
             <tr>
                 <td th:text="${p.getName()}"></td>
                 <td th:text="${p.getPrice()}"></td>
-                <td th:text="${p.getDescription()}"></td>
+                <td> <a th:href="${p.getUrl()}">Click</a> </td>
             </tr>
         </th:block>
     </table>
